--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "author": "michio",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
     "eslint": "^5.15.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.4.20",
+    "node-iframe-replacement": "^1.0.0",
+    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
