In this commit the Navbar Extended

--- a/variables.env
+++ b/variables.env
@@ -1,10 +1,8 @@
 NODE_ENV=development
 DATABASE=mongodb://localhost:27017/rcfminerals
-MAIL_USER=c8f992136c2fd5
-MAIL_PASS=44ace64be2cd6c
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-PORT=8600
-MAP_KEY=AIzaSyC3WnzSS6jyuXcq53CIcVDdJLc6CPG8p98
-SECRET=snickers
-KEY=sweetsesh
+MAIL_USER=admin@rcfmineralsltd.com
+MAIL_PASS=ctSmB1AFfxYE
+MAIL_HOST=rcfmineralsltd.com
+RECEIVER_EMAIL_ADDR=info@rcfmineralsltd.com
+MAIL_PORT=465
+PORT=3300
